css/allshop.css
/* ... */
#searchwrap form input{
	width: 100%;
}
#searchwrap form button{
	width: 48px;
	height: inherit;
	display: flex;
	justify-content: center;
	align-items: center;
}
/*back button*/
#searchwrap form button:nth-child(1){
	display: none;
}
#searchwrap input:focus{
	height: 48px;
}
#searchwrap input::placeholder{
	font-family: "Roboto", sans-serif;
	font-weight: 300;
	color: var(--color-black-ligth);
}
#search-content{
	display: none;
	position: absolute;
	text-align: left;
}
#search-content ul{
	margin: 0;
	padding: 16px 0;
}
#search-content > ul li{
	padding: 0 16px !important;
}
#searchHis{
	display: block;
	color: #8d8d8d !important;
}
#searchSug{
	display: none;
}
#cart-indicator{
	position: absolute;
	right: 0;
	bottom: 0;
	border-radius: 50%;
	width: 20px;
	height: 20px;
	color: #fff;
	background-color: var(--color-gray-dark);
	font-size: 10px;
	/*centering*/
	line-height: 20px;
	font-family: cursive;
}
/*shadow effect*/
.shadow{
	position: fixed;
	top: 0;
	left: 0;
	background-color: rgba(0,0,0,0.9);
	width: 100vw;
	height: 100vh;
	display: none;
	z-index: 100;
	border-radius: 0;
}
/*active effect*/
#searchwrap.active, #searchwrap .active{
	background-color: white !important;
	z-index: 101;
	display: block;
}
.category .active{
	background-color: var(--color-main-dark) !important;
	color: #fff;
}
.active input::placeholder{
	color: #8d8d8d;
}
/*sidebar*/
#sidenav{
	position: fixed;
	top: 0;
	left: -70vw;
	width: 70vw;
	min-height: 100vh;
	z-index: 101;
	overflow-x: hidden;
	background-color: #edf0f2;
	color: black;
	padding: 1em 1em 1em 2em;
	transition: left .2s;
	display: flex;
	flex-direction: column;
	white-space: nowrap;
	overflow-y: scroll;
}
#sidenav::-webkit-scrollbar{
	width: 3px;
	height: 100%;
	background-color: transparent;
}
#sidenav::-webkit-scrollbar-thumb{
	background-color: rgba(0,0,0,.7);
}
#logo{
	display: flex;
	align-items: center;
	font-family: 'Poiret One', cursive;
	max-height: 48px;
}
#logo img{
	width: 1.5em;
	height: 1.5em;
	margin-right: 1em;
}
#logo h2{
	font-size: 1.5em !important;
	font-weight: bolder;
}
#sidenav a{
	display: block;
	padding: .75em 0;
	margin: 0;
	text-decoration: none;
}
#sidenav a > i{
	width: 1em;
}
#sidenav .close{
	position: fixed;
	top: 8%;
	left: 85%;
	transform: translate(-50%, -50%);
	display: none;
	color: #ffffff;
}
#sidenav a i.fa{
	margin-right: 1em;
}
/*content*/
.content{
	padding: 8px;
	margin-top: 134px;
}
.content-full{
	padding: 8px !important;
	margin: 0 !important;
}
.content h1,.content  h2,.content  h3,.content  h4,.content  h5,.content  p{
	margin: 0;
	padding: 0;
}
.items{
	margin: 0 -8px 8px -8px;
	padding: 8px;
	font-size: 14px;
	background-color: #ffffff;

	display: flex;
	flex-direction: row;
	align-items: center;
}
.items:-webkit-scrollbar{
	display: none;
}
.items-header{
	padding: 0 8px;
	font-size: 14px;
	background-color: #ffffff;
	margin: 0 -8px 0 -8px;
	display: flex;
	align-items: center;
	justify-content: space-between;
	height: 40px;
	font-weight: bolder;
}
/*right side icon etc*/
.items-header > *:nth-child(2){
	color: #bdbdbd;
	font-weight: lighter;
}
.items-row{
	overflow-y: hidden;
	overflow-x: auto !important;
	white-space: nowrap;
}
.items-col{
	overflow-y: auto !important;
	overflow-x: hidden;
	white-space: nowrap;
	flex-wrap: wrap;
	/* align-items: center; */
	justify-content: center;
}
.items-row::-webkit-scrollbar{
	display: none;
}
.items img{
	width: 100% !important;
	height: 144px;
	object-fit: cover;
	border-radius: 3px 3px 0 0;
}
.promo{
	font-size: 10px;
	padding: 4px !important;
	display: flex;
	align-items: center;
	justify-content: center;
	background-color: var(--color-gray-dark);
	margin: 0 0 0 8px;
	color: #fff;
}
.items .promo{
	border-radius: 0 3px 0 5px;
	position: absolute;
	color: var(--color-black);
	background-color: #fff;
	right: 0;
	top: 0;
}
.timer{
	font-weight: 500;
	margin: 0 8px;
	font-size: 1em;
	color: #8d8d8d;
	font-size: 14px;
}
/* an item = .items > * > *{} */
.items > * > *{
	padding: 0;
	margin: 0 12px 12px 0;
	position: relative;
	display: inline-flex;
	flex-direction: column;
	background-color: #ffffff;
	box-shadow: 0 0 8px var(--color-gray);
	border-radius: 3px;
}
.items > * > * *{
	padding: 0;
	margin: 0;
}
/*Product name, price etc*/
.items > * > * > ul{
	display: flex;
	height: 100%;
}
.items > * > * > ul > li{
	padding: 0 4px 4px 4px;
	display: flex;
	flex: 1 1 auto;
	min-width: 0;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}
.items > * > * > ul > li:first-child{
	padding: 4px !important;
}
.items > * > * > ul > li > h4{
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}
/*product name*/
.items > * > * > ul > li:nth-child(1){
	text-align: left;
	max-height: 2em;
}
/*product rating*/
.items > * > * > ul > li:nth-child(3){
	color: #8d8d8d;
	justify-content: space-between !important;
	align-items: center;
	font-size: 12px;
}
.landscape > * > *{
	width: 288px;
	min-height: 192px;
}
.landscape > * > * > ul{
	align-items: center;
}
.landscape > * > * > ul > li:nth-child(3){
	display: flex !important;
	flex-direction: column !important;
}
.portrait > * > *{
	width: 144px;
	/*min-height: 240px;*/
}
.portrait > * > * > ul{
	flex-direction: column;
}
.price{
	display: flex;
	flex-direction: column;
	font-size: 14px;
	text-align: left;
	height: 42px;
}
.price > *{
	padding: 2px 0 !important;
}
/*disc = discount{amounts, price before}*/
.price > .disc *{
	padding: 2px !important;
	font-size: 12px !important;
	color: var(--color-black-ligth);
}
/*amount*/
.price > .disc > *:nth-child(1){
	background-color: var(--color-green-light);
	border-radius: 3px;
}
/*price before*/
.price > .disc > *:nth-child(2){
	text-decoration: line-through;
	color: var(--color-gray-dark)
}
/*actual price*/
.price > *:nth-child(2){
	font-weight: bolder ;
	color: var(--color-green-dark);
}
/*form*/
.form-group{
	padding: 0 8px !important;
}
.form-group > *{
	margin: 0 0 8px 0;
}
.form-group > *:first-child{
	margin: 8px 0;
}
/* ... */

